<resources>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="loginText">Enter your login</string>
    <string name="passwordText">Enter your password</string>

    <string name="loginButton">Login</string>
    <string name="signupButton">Sign Up</string>
    <string name="noLoggingButton">Continue without logging</string>

    <string name="signup">Sign up</string>
    <string name="phoneText">Enter your phone number</string>
    <string name="emailText">Enter your email</string>
    <string name="nameText">Enter your name</string>
    <string name="surnameText">Enter your surname</string>
    <string name="addressText">Enter your address (country, city)</string>

    <string name="feelsLikeTemperature">Feels like: %s°C</string>
    <string name="temperature">%s°C</string>

    <string name="windSpeed">Wind speed: %.2f km/h</string>
    <string name="humidity">Humidity: %s%%</string>
    <string name="pressure">Pressure: %d mmHg</string>
    <string name="weatherDescription">Visibility: %s km \n \n Seems to be like its %s today</string>
    <string name="clouds">Clouds: %d</string>
    <string name="sunset">Sunset: %s</string>
    <string name="sunrise">Sunrise: %s</string>
    <string name="visibility">Visibility: %.0f km</string>
    <string name="minTemp">Min: %.2f°C,</string>
    <string name="maxTemp">Max: %.2f°C</string>
    <string name="rainChance">Chance of rain: %s%%</string>

    <!-- TOAST  -->

    <string name="toastAdded">Added</string>
    <string name="toastDeletedAllFavorite">Deleted all favorite places</string>
    <string name="toastFillAllFields">Please fill all fields!</string>
    <string name="toastEnterValidEmail">Please enter valid email!</string>
    <string name="toastSignUpSucceed">Registration succeed</string>
    <string name="toastSignUpFailed">Registration failed</string>
    <string name="toastAuthFailed">Authentication failed.</string>

    <!-- SETTINGS  -->
    <string name="settingsLogIn">Log in</string>
    <string name="settingsLogOut">Log out</string>
    <string name="settingsToastSignedOut">Signed out!</string>
    <string name="settingsGreeting">Hello, %s!</string>
    <string name="settingsNotAuthorised">Not authorised.</string>
    <string name="settingsTitle">Settings</string>

    <!-- PREFERENCES  -->
    <string name="preferencesTurnNotif">Turn notifications</string>
    <string name="preferencesTurnNotifSummary">Switch to disallow sending notifications</string>
    <string name="preferencesTurnSound">Turn off sound</string>
    <string name="preferencesTurnSoundSummary">Switch to turn off sound</string>
    <string name="preferencesLogButtonSummary">Press this area to login or to log out</string>
    <string name="preferencesUserButton">User</string>
    <string name="preferencesUserSummary">Information about user</string>
    <string name="preferencesCustomLocationSummary">Location for which weather is displayed</string>
    <string name="preferencesDeviceLocationSummary">Switch to allow using your location</string>
    <string name="preferencesCustomLocation">Location</string>
    <string name="preferencesDeviceLocation">Device location</string>
    <string name="preferenceSoundAndNotif">Sound and notifications</string>

    <!-- Bottom navigation -->

    <string name="favorite">Favorite</string>
    <string name="today">Today</string>
    <string name="Forecast">Forecast</string>
    <string name="Settings">Settings</string>

    <!-- BUTTONS -->
    <string name="addToFavoriteBtn">Add to favorite</string>
    <string name="clearAllBtn">Clear all</string>

    <string name="legendForChart">Temperature chart for next %s days of %s</string>

    <string name="loading">Loading</string>

    <string name="preferencesClickToInfoUser">Click to see information about user</string>

</resources>